# cmem-plugin-docs

./: .copier-answers.env  .copier-answers.yml  .gitignore  .gitlab-ci.yml  404.html  README-public.md  README.md  Taskfile.yaml  index.html  index.md  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: check.yml
about/changelog/: index.html
about/contributing/: index.html
cmem_plugin_docs/transform/: __init__.py
cmem_plugin_docs/workflow/: __init__.py
coverage/: covindex.html  d_1cc319c316faa4ee___init___py.html  d_3e6d6f21f6b9b3aa___init___py.html  d_4a5593cfa3ce8e2c___init___py.html  index.html  status.json
docs/: docs.py  gen-ref-nav.py  gen_getting_started.py  gen_how_to_guides.py  gen_index_doc.py  getting-started.md  index.md  tutorials.md
docs/stylesheets/: eccenca-theme.css  extra.css
getting-started/: index.html
how-to-guides/: index.html
how-to-guides/SUMMARY/: index.html
how-to-guides/test_docs/: index.html
how-to-guides/utils/: index.html
reference/: index.html
reference/SUMMARY/: index.html
reference/transform/: index.html
reference/workflow/: index.html
search/: search_index.json
tests/: test_docs.py
