[tool.poetry]
name = "cmem-plugin-docs"
version = "0.0.1"
license = "Apache-2.0"
description = "This eccenca Corporate Memory plugin totally rocks with all new docs support"
authors = ["Ranga Reddy Nukala <rangareddy.nukala@eccenca.com>"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Plugins",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
readme = "README-public.md"
keywords = [
    "eccenca Corporate Memory", "plugin"
]

[tool.poetry.dependencies]
python = "^3.9"
cmem-plugin-base = "^2.1.0"
mkdocs = "^1.3.1"
mkdocs-gen-files = "^0.4.0"
pymdown-extensions = "^9.5"
mkdocs-autorefs = "^0.4.1"
mkdocs-material = "^8.4.3"
mkdocs-material-extensions = "^1.0.3"
mkdocstrings = "^0.19.0"
mkdocs-include-markdown-plugin = "^3.7.1"
mkdocs-git-revision-date-localized-plugin = "^1.1.0"
mkdocs-coverage = "^0.2.5"
mkdocs-literate-nav = "^0.4.1"
mkdocs-section-index = "^0.3.4"
markdown-callouts = "^0.2.0"
mkdocstrings-python = "^0.7.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
pytest-cov = "^3.0.0"
black = "^22.1.0"
bandit = "^1.7.2"
pylint-junit = "^0.3.2"
safety = "^1.10.3"
genbadge = "^1.0.6"
flake8-formatter-junit-xml = "^0.0.6"
typed-ast = "^1.5.2"
mypy = "^0.931"
coverage = "^6.3.2"
defusedxml = "^0.7.1"
mkdocs-macros-plugin = "^0.7.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint.MASTER]
load-plugins="pylint_junit"

[tool.pylint.General]
ignore = "version.py"

[tool.pylint.'MESSAGES CONTROL']
extension-pkg-whitelist = "pydantic"
disable = "fixme"

# https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "R0903"

[tool.pylint.format]
max-line-length = "88"

[tool.mypy]
warn_return_any = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = ""

